force-app/main/default/objects/Krow__Timesheet_Detail__c/Krow__Timesheet_Detail__c.object-meta.xml
<CustomObject>
    <label>Timesheet Detail</label>
    <nameField>
        <displayFormat>TD{00000000}</displayFormat>
        <label>Timesheet Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>