force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Bill_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Bill_Rate_Amount__c</fullName>
    <formula>Krow__Bill_Rate__c * Krow__Total_Hours__c</formula>
    <label>Deprecated2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>