force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Bill_Rate_Amount_New__c.field-meta.xml
<CustomField>
    <fullName>Krow__Bill_Rate_Amount_New__c</fullName>
    <formula>Krow__Bill_Rate_New__c * Krow__Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>