force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Billable__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>