force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Hold_For_Billing__c.field-meta.xml
<CustomField>
    <fullName>Krow__Hold_For_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold For Billing</label>
    <type>Checkbox</type>
</CustomField>