force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Holiday_Dates__c.field-meta.xml
<CustomField>
    <fullName>Krow__Holiday_Dates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Dates</label>
    <referenceTo>Krow__Holiday_Dates__c</referenceTo>
    <relationshipLabel>Timesheet Details</relationshipLabel>
    <relationshipName>Timesheet_Details</relationshipName>
    <type>Lookup</type>
</CustomField>