force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Is_From_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Krow__Is_From_Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From Holidays</label>
    <type>Checkbox</type>
</CustomField>