force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Is_From_PTO__c.field-meta.xml
<CustomField>
    <fullName>Krow__Is_From_PTO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From PTO</label>
    <type>Checkbox</type>
</CustomField>