force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Milestone__c.field-meta.xml
<CustomField>
    <fullName>Krow__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Krow__Task__c.Krow__Milestone__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Timesheet Details (Milestone)</relationshipLabel>
    <relationshipName>Timesheet_Detail_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>