force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Klient Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Timesheet Details</relationshipLabel>
    <relationshipName>Timesheet_Details</relationshipName>
    <type>Lookup</type>
</CustomField>