force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Project_Role__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Role</label>
    <referenceTo>Krow__Krow_Role__c</referenceTo>
    <relationshipLabel>Timesheet Details</relationshipLabel>
    <relationshipName>Timesheet_Details</relationshipName>
    <type>Lookup</type>
</CustomField>