force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Punch_Comments__c.field-meta.xml
<CustomField>
    <fullName>Krow__Punch_Comments__c</fullName>
    <label>Punch Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>