force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Punch_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Punch_Date__c</fullName>
    <label>Punch Date</label>
    <type>Date</type>
</CustomField>