force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Punch_In__c.field-meta.xml
<CustomField>
    <fullName>Krow__Punch_In__c</fullName>
    <label>Punch In</label>
    <type>DateTime</type>
</CustomField>