force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Punch_Out__c.field-meta.xml
<CustomField>
    <fullName>Krow__Punch_Out__c</fullName>
    <label>Punch Out</label>
    <type>DateTime</type>
</CustomField>