force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Sun_Note__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sun_Note__c</fullName>
    <label>Sun Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>