force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Klient Task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Krow__Task__c.Krow__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Krow__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Timesheet Details</relationshipLabel>
    <relationshipName>Timesheet_Details</relationshipName>
    <type>Lookup</type>
</CustomField>