force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Thu_Note__c.field-meta.xml
<CustomField>
    <fullName>Krow__Thu_Note__c</fullName>
    <label>Thu Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>