force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Total_Billable__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Billable__c</fullName>
    <formula>Krow__Bill_Rate_New__c * Krow__Total_Hours__c</formula>
    <label>Total Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>