force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Cost__c</fullName>
    <formula>Krow__Cost_Rate_New__c * Krow__Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>