force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Hours__c</fullName>
    <formula>Krow__Sun__c+Krow__Mon__c+Krow__Tue__c+Krow__Wed__c+Krow__Thu__c+Krow__Fri__c+Krow__Sat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>