force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Week_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Week_End_Date__c</fullName>
    <label>Week End Date</label>
    <type>Date</type>
</CustomField>