force-app/main/default/objects/Krow__Timesheet_Detail__c/fields/Krow__Weekly_Note__c.field-meta.xml
<CustomField>
    <fullName>Krow__Weekly_Note__c</fullName>
    <description>Weekly note for timesheet detail.</description>
    <label>Weekly Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>