force-app/main/default/objects/Krow__Timesheet_Detail__c/validationRules/Krow__Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Account_Required</fullName>
    <active>true</active>
    <description>If custom settings Account required is ON then, Account field is required to save the timesheet.</description>
    <errorConditionFormula>AND($Setup.Krow__Krow_Timesheet_Configuration__c.Krow__Account_Required__c,AND(NOT(Krow__Is_From_PTO__c), NOT(Krow__Is_From_Holidays__c), ISBLANK(Krow__Account__c)))</errorConditionFormula>
    <errorMessage>Account field is required to save the timesheet.</errorMessage>
</ValidationRule>