force-app/main/default/objects/Krow__Timesheet_Detail__c/validationRules/Krow__Project_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Project_Required</fullName>
    <active>true</active>
    <description>If custom settings Project required is ON then, Project field is required to save the timesheet</description>
    <errorConditionFormula>AND($Setup.Krow__Krow_Timesheet_Configuration__c.Krow__Project_Required__c, AND(NOT(Krow__Is_From_PTO__c), NOT(Krow__Is_From_Holidays__c), ISBLANK(Krow__Project__c)))</errorConditionFormula>
    <errorMessage>Project field is required to save the timesheet</errorMessage>
</ValidationRule>