force-app/main/default/objects/Krow__Timesheet_Detail__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Project_Resource__c</columns>
    <columns>Krow__Project__c</columns>
    <columns>Krow__Task__c</columns>
    <columns>Krow__Week_Start_Date__c</columns>
    <columns>Krow__Week_End_Date__c</columns>
    <columns>Krow__Billable__c</columns>
    <columns>Krow__Bill_Rate_New__c</columns>
    <columns>Krow__Bill_Rate_Amount_New__c</columns>
    <columns>Krow__Cost_Rate_New__c</columns>
    <columns>Krow__Cost_Rate_Amount_New__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>